# uvpy

./: .gitignore  .gitmodules  pyproject.toml
examples/veighna_trader/: run.py
vnpy/trader/locale/: __init__.py
vnpy/trader/ui/: mainwindow.py  widget.py
