[project]
name = "vnpy"
dynamic = ["version"]
description = "A framework for developing quant trading systems."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Xiaoyou Chen", email = "xiaoyou.chen@mail.vnpy.com"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    # "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Office/Business :: Financial :: Investment",
    "Natural Language :: Chinese (Simplified)",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
    "tzlocal>=5.3.1",
    "PySide6==6.8.2.1",
    "pyqtgraph>=0.13.7",
    "qdarkstyle>=3.2.3",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "ta-lib>=0.6.4",
    "deap>=1.4.2",
    "pyzmq>=26.3.0",
    "plotly>=6.0.0",
    "tqdm>=4.67.1",
    "loguru>=0.7.3",
    "nbformat>=5.10.4",
    "requests>=2.32.0",
    "qrcode>=7.4.2",
    "vnpy-algotrading",
    "vnpy-ctabacktester",
    "vnpy-ctastrategy",
    "vnpy-datamanager",
    "vnpy-datarecorder",
    "vnpy-dolphindb",
    "vnpy-paperaccount",
    "vnpy-portfoliomanager",
    "vnpy-portfoliostrategy",
    "vnpy-riskmanager",
    "vnpy-xt",
    # "vnpy-ctp",        # Requires proprietary CTP API SDK
    # "vnpy-ctptest",    # Requires proprietary CTP API SDK
    "vnpy-sqlite",
    "vnpy-spreadtrading",
    "polars>=1.42.1",
    "alphalens>=0.4.0",
    "wmi>=1.5.1; sys_platform == 'win32'",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "torch>=2.12.1",
    "pyarrow>=24.0.0",
]
keywords = ["quant", "quantitative", "investment", "trading", "algotrading"]

[project.optional-dependencies]
alpha = [
    "polars>=1.26.0",
    "scipy>=1.15.2",
    "alphalens-reloaded>=0.4.5",
    "scikit-learn>=1.6.1",
    "lightgbm>=4.6.0",
    "torch>=2.6.0",
    "pyarrow>=19.0.1",
]
dev = [
    "pandas-stubs>=2.2.3.250308",
    "scipy-stubs>=1.16.3.0",
    "hatchling>=1.27.0",
    "babel>=2.17.0",
    "meson>=1.7.0",
    "ninja>=1.11.1",
]

[project.urls]
"Homepage" = "https://www.vnpy.com"
"Documentation" = "https://www.vnpy.com/docs"
"Changes" = "https://github.com/vnpy/vnpy/blob/master/CHANGELOG.md"
"Source" = "https://github.com/vnpy/vnpy/"
"Forum" = "https://www.vnpy.com/forum"

[build-system]
requires = ["hatchling>=1.27.0", "babel>=2.17.0"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["plugins/*"]

[tool.uv.sources]
vnpy = { workspace = true }
vnpy-algotrading = { workspace = true, editable = true }
vnpy-ctabacktester = { workspace = true, editable = true }
vnpy-ctastrategy = { workspace = true, editable = true }
vnpy-datamanager = { workspace = true, editable = true }
vnpy-datarecorder = { workspace = true, editable = true }
vnpy-dolphindb = { workspace = true, editable = true }
vnpy-paperaccount = { workspace = true, editable = true }
vnpy-portfoliomanager = { workspace = true, editable = true }
vnpy-portfoliostrategy = { workspace = true, editable = true }
vnpy-riskmanager = { workspace = true, editable = true }
vnpy-xt = { workspace = true, editable = true }
vnpy-ctp = { workspace = true }
vnpy-ctptest = { workspace = true }
vnpy-sqlite = { workspace = true, editable = true }
vnpy-spreadtrading = { workspace = true, editable = true }

[tool.hatch.version]
path = "vnpy/__init__.py"
pattern = "__version__ = ['\"](?P<version>[^'\"]+)['\"]"

[tool.hatch.build.targets.wheel]
packages = ["vnpy"]
include-package-data = true

[tool.hatch.build.targets.sdist]
include = ["vnpy*"]

[tool.hatch.build.hooks.custom]
path = "vnpy/trader/locale/build_hook.py"

[tool.hatch.build.targets.wheel.force-include]
"vnpy/trader/locale/en/LC_MESSAGES/vnpy.mo" = "vnpy/trader/locale/en/LC_MESSAGES/vnpy.mo"

[tool.ruff]
target-version = "py311"
output-format = "full"

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "E",  # pycodestyle error
    "F",  # pyflakes
    "UP",  # pyupgrade
    "W",  # pycodestyle warning
]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = [
    "polars",
    "lightgbm",
    "hatchling.*",
    "qrcode"
]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "meson>=1.11.1",
    "ninja>=1.13.0",
]
